fixed spacing when no carousel

--- a/app/assets/stylesheets/friends/find_friends.scss
+++ b/app/assets/stylesheets/friends/find_friends.scss
@@ -202,3 +202,12 @@
     margin-top: 5px;
     margin-bottom: 0px;
 }
+
+.friends-no-list {
+    font-size: x-large;
+}
+
+.friends-no-list-cont {
+    justify-content: center;
+    margin: auto;
+}
